tests/snapshots/integration__integration_tests__merge__merge_rebase_conflict.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
🔄 [36mRebasing onto [1mmain[22m...[39m
❌ [31mRebase onto [1mmain[22m incomplete[39m
[107m [0m  Rebasing (1/1)
[107m [0m  error: could not apply c661874... Update shared.txt in feature
[107m [0m  Could not apply c661874... # Update shared.txt in feature
[107m [0m  Auto-merging shared.txt
[107m [0m  CONFLICT (content): Merge conflict in shared.txt
